--- a/spec/src/main/asciidoc/soap-spec.adoc
+++ b/spec/src/main/asciidoc/soap-spec.adoc
@@ -16,13 +16,21 @@
 ifdef::backend-pdf[]
 :pagenums:
 :numbered:
-:title-logo-image: image:jakarta_ee_logo_schooner_color_stacked_default.png[pdfwidth=4.25in,align=right]
+:title-logo-image: image:images/jakarta_ee_logo_schooner_color_stacked_default.png[pdfwidth=4.25in,align=right]
 endif::[]
 
 // == License
 :sectnums!:
 include::license-efsl.adoc[]
 
+// == Scope
+:sectnums!:
+include::scope.adoc[]
+
 // == Jakarta SOAP with Attachments
 :sectnums:
 include::SOAPAttachments.adoc[]
+
+// == Appendix
+:sectnums!:
+include::appendix.adoc[]
