--- a/spec/src/main/asciidoc/appendix.adoc
+++ b/spec/src/main/asciidoc/appendix.adoc
@@ -35,6 +35,7 @@ http://www.ws-i.org/Profiles/AttachmentsProfile-1.0.html
 === Changes in Version 3.0
 
 * `SOAPElementFactory` has been removed
+* `SOAPConnection.call` is no longer required to support `javax.xml.messaging.URLEndpoint`
 
 === Changes in Version 2.0
 
