--- a/spec/src/main/asciidoc/appendix.adoc
+++ b/spec/src/main/asciidoc/appendix.adoc
@@ -1,5 +1,5 @@
 //
-// Copyright (c) 2020, 2021 Contributors to the Eclipse Foundation
+// Copyright (c) 2020, 2022 Contributors to the Eclipse Foundation
 //
 
 == Appendix A: References
@@ -36,6 +36,7 @@ http://www.ws-i.org/Profiles/AttachmentsProfile-1.0.html
 
 * `SOAPElementFactory` has been removed
 * `SOAPConnection.call` is no longer required to support `javax.xml.messaging.URLEndpoint`
+* Provider lookup through `jaxm.properties` is removed
 
 === Changes in Version 2.0
 
